update package and fix option wrapping

--- a/src/styles/components/_showpoll.css
+++ b/src/styles/components/_showpoll.css
@@ -59,6 +59,7 @@
   font-weight: initial;
   margin-right: 2em;
   width: 50%;
+  word-wrap: break-word;
 }
 
 .error--wrapper {
